tests/harness/errors/038_double_equals.eu
# Error: using == instead of = for equality
a: 1 == 1
